<resources>
  <string name="app_name">Game Backlog</string>
  <string name="action_settings">Settings</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="title_activity_add">AddActivity</string>
    <string name="release_date">release date</string>
  <string name="platform">platform</string>
  <string name="title">title</string>
    <string name="year">Year</string>
  <string name="month">Month</string>
  <string name="day">Day</string>
    <string name="delete_all_games">Delete all games</string>
</resources>
